2013-10-08  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_reporting_advanced_tab.php
	include/help/es/help_reporting_advanced_tab.php: Add info
	in the report macros help with new feature

	* images/custom_logo/none.png
	images/custom_logo/artica_logo.jpg
	images/custom_logo/artica_logo.png
	images/custom_logo/sourceforge.png
	images/custom_logo/pandora_logo_head.png
	images/custom_logo/none.jpg: Clean and create new files for
	pdf header

	* godmode/reporting/reporting_builder.php: Set FreeSans as
	default font in reports

2013-10-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	include/javascript/jquery.pandora.controls.js
	include/functions_treeview.php
	operation/tree.php
	operation/agentes/ver_agente.php
	godmode/groups/group_list.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_modules.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/reporting/graph_builder.graph_editor.php: Add sorting
	in many agents list retrieved by ajax and tree view

2013-10-07  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Added a overflow hidden
	in left informative tab of pandoras interface to avoid
	ugly visual errors.

	* godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.item_editor.php: Change Avg
	strings by Rate strings in top N reports for incident #211

2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_add_alerts.php: fixed the get agents in
	the groups with subgroups and enabled "Group recursion".
	
	Fixes: #2393

2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php: fixed the align of bottom
	create buttom.
	
	Fixes: #2392

2013-10-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_networkmap.php,
	  operation/agentes/networkmap_list.php,